--- a/environment.yml
+++ b/environment.yml
@@ -1,15 +1,9 @@
 name: FloodForecastingMVP
 channels:
   - conda-forge
-  - defaults
 dependencies:
   - python=3.11
+  - nodejs=18.*
   - pip
-  - flask>=3.1.1
-  - flask-cors>=6.0.0
-  - flask-sqlalchemy>=3.1.1
-  - requests>=2.32.4
-  - click>=8.1.8
-  - nodejs>=18          # for npm & vite
   - pip:
     - -r requirements.txt
